--- a/src/main/webapp/principal.html
+++ b/src/main/webapp/principal.html
@@ -5,8 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" href="res/bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="res/bootstrap/css/lista-compras.css">
-        <script src="res/bootstrap/js/angular.min.js"></script>
-        <script src="res/bootstrap/js/loja.js"></script>
+        <link rel="stylesheet" href="res/bootstrap/css/gh-buttons.css">
     </head>
             <title>Compras de Maria</title>
     </head>
@@ -21,9 +20,9 @@
         
         <div class="row">
             <form class="form-inline" name="formPrincipal">
-                <input type="button" class="btn btn-primary" onclick="location.href='lista.html';" value="Listas de Compras"/>
+                <input type="button" class="button pill " onclick="location.href='lista.html';" value="Listas de Compras"/>
                 <br><br>
-                <input type="button" class="btn btn-primary" onclick="location.href='produtos.html';" value="Produtos"/>
+                <input type="button" class="button pill" onclick="location.href='produtos.html';" value="Produtos"/>
                 
             </form>
         </div>
