Finalizado 99% =D Funcionando Lista com produtos =) Pendente Hospedar

--- a/src/main/webapp/principal.html
+++ b/src/main/webapp/principal.html
@@ -20,7 +20,7 @@
         
         <div class="row">
             <form class="form-inline" name="formPrincipal">
-                <input type="button" class="button pill " onclick="location.href='lista.html';" value="Listas de Compras"/>
+                <input type="button" class="button pill " onclick="location.href='listaCompras.html';" value="Listas de Compras"/>
                 <br><br>
                 <input type="button" class="button pill" onclick="location.href='produtos.html';" value="Produtos"/>
                 
