100%!!! Realizado alterações para funcionar remotamente, adicionado em um servidor OpenShift. Realizado configurações na conexão com o banco.

--- a/src/main/webapp/lista.html
+++ b/src/main/webapp/lista.html
@@ -63,10 +63,9 @@
                 
             </div>
             
-            <div class="row">
-                Adicionar Produto na Lista
-            </div><br>
-            <div class="row">
+            <div style="border: 1px solid black;"  class="table-responsive">
+                   Adicionar Produto na Lista
+            <br>
                 <form class="form-inline" name="formProduto">
                     Produto:
                     <select  class="form-control"
